--- a/src/app/features/tasks/task-context-menu/task-context-menu-inner/task-context-menu-inner.component.scss
+++ b/src/app/features/tasks/task-context-menu/task-context-menu-inner/task-context-menu-inner.component.scss
@@ -26,6 +26,9 @@
   text-align: left;
   display: flex;
   align-items: center;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .quick-access {
